[project]
name = "discord-ext-flow"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = []
authors = [
    { name = "hawk-tomy", email = "67221751+hawk-tomy@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "discord.py>=2.4",
    # .
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.399",
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    # .
]

[project.urls]
Source = "https://github.com/keizaiya/discord-ext-flow"

[tool.pyright]
typeCheckingMode = "strict"
include = ["discord"]
ignore = ["example"]

reportGeneralTypeIssues = "warning"

reportImportCycles = "none"

useLibraryCodeForTypes = true
deprecateTypingAliases = true

strictListInference = true
strictDictionaryInference = true

reportFunctionMemberAccess = false
reportIncompatibleMethodOverride = false
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnnecessaryIsInstance = false

[tool.mypy]
explicit_package_bases = true
strict = true

show_error_context = true
show_column_numbers = true

allow_redefinition = true

warn_unused_ignores = false
warn_no_return = false

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = ["venv", ".venv"]
fix = true

[tool.ruff.lint]
select = [
    "ALL",
    # .
]
ignore = [
    # Ignore missing self/cls annotation
    "ANN1",
    # Ignore missing docstring in public module
    "D100",
    # Ignore missing docstring in public package
    "D104",
    # Ignore missing docstring in __init__
    "D107",
    # Allow use string/f-string/str.format
    "EM",
    # Allow use boolean type hint in positional argument
    "FBT",
    # Allow use f-string for logging
    "G004",
    # Allow private member access (e.g. _foo)
    "SLF001",
    # Allow use constant variable
    "PLR2004",
    # Allow use assert(only type check)
    "S101",
    # Ignore long message in raise
    "TRY003",

    # ruff recommended avoid rules if use ruff formatter
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    # Ignore any import error in __init__.py
    # Ignore unused
    "F401",
    # Ignore import star
    "F403",
    # Ignore import star and use
    "F405",
    # .
]
"example/*.py" = [
    # Ignore missing docstring in example
    "D1",
    # Allow use non cryptographic random
    "S311",
    # Allow use print() in example
    "T201",
    # Allow namerspace package(examples are not package)
    "INP",
    # .
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"

[tool.pdm.build]
includes = ["discord"]

[tool.pdm.version]
source = "file"
path = "discord/ext/flow/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
